feat: wip solar creeper